# ai-invoice-agent

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  test.json
app/: __init__.py  extractor.py  main.py  models.py  utils.py
app/api/: __init__.py  health.py  invoice.py
app/categorization/: __init__.py  models.py  service.py  vector_store.py
app/core/: __init__.py  config.py  pdf_processor.py  validation.py
app/models/: __init__.py  invoice.py
app/providers/: __init__.py  base.py  deepseek.py  gemini.py  institution_detection.py  openai.py  openai_provider.py  prompts.py  utils.py
app/providers/prompts/: __init__.py  deepseek.py  gemini.py  openai.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md
examples/: sample-response.json
scripts/: docker-run.sh
tests/: __init__.py  test_models.py  test_provider_keys.py  test_utils.py
